<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/signin"
        android:textSize="30dp"></TextView>

     <EditText
        android:id="@+id/editTextTextEmailAddress"
         android:layout_marginTop="20dp"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/oval_button"
        android:text="@string/email"
         android:textSize="30dp"
         android:textColor="@color/grey"
         android:paddingLeft="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_margin="10dp"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/oval_button"
        android:text="@string/password"
        android:textSize="30dp"
        android:textColor="@color/grey"
        android:paddingLeft="20dp"
        android:ems="10"></EditText>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10dp">

       <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textSize="15dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"></CheckBox>
      <TextView
          android:id="@+id/forgot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forgot"
          android:textSize="15dp"
          android:layout_weight="1"></TextView>
 </LinearLayout>

    <Button
        android:id="@+id/sign_button"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/oval_button_black"
        android:text="@string/sign_in"
        android:textSize="20dp"
        android:textColor="@color/white">
    </Button>

    <TextView
        android:id="@+id/just_text"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/just"></TextView>
</LinearLayout>
