<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     >
        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/photo">
        </ImageView>
     <ImageButton
         android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_camera"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp">
     </ImageButton>
 </FrameLayout>

       <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
           android:layout_marginTop="20dp">
        </EditText>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_weight="1">
        </EditText>

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_weight="2"
            android:drawableRight="@drawable/ic_location"
                      >
        </EditText>
         </LinearLayout>

        <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
            android:layout_marginTop="20dp">
        </EditText>

       <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
           android:layout_marginTop="20dp">

    <EditText
        android:id="@+id/inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory">
    </EditText>

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_weight="1"
        android:layout_marginLeft="100dp"
        >
    </EditText>
      </LinearLayout>
</LinearLayout>
