<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/oval_button"
        android:text="@string/email"
        android:textSize="30dp"
        android:textColor="@color/grey"
        android:paddingLeft="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/signin"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_margin="10dp"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/oval_button"
        android:text="@string/password"
        android:textSize="30dp"
        android:textColor="@color/grey"
        android:paddingLeft="20dp"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"></EditText>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textSize="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/forgot"></CheckBox>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:text="@string/forgot"
        android:textSize="15dp"
        app:layout_constraintLeft_toRightOf="@id/checkBox"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"></TextView>

    <Button
        android:id="@+id/sign_button"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/oval_button_black"
        android:text="@string/sign_in"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintLeft_toLeftOf="parent">
    </Button>

    <TextView
        android:id="@+id/just_text"
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:text="@string/just"
        app:layout_constraintTop_toBottomOf="@id/sign_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>