<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="504dp"
        android:layout_height="230dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf ="parent"
        android:background="@drawable/photo"></ImageView>

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_camera"
        android:contentDescription="camera_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"></ImageButton>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_below="@+id/image_photo"></EditText>

    <EditText
        android:id="@+id/price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/location"
        android:text="@string/price"></EditText>

    <EditText
        android:id="@+id/location"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:drawableRight="@drawable/ic_location"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toRightOf="@+id/price"
        android:text="@string/location"></EditText>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/price"
       ></EditText>

    <EditText
        android:id="@+id/inventory"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inventory"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintRight_toLeftOf="@id/weight"></EditText>

    <EditText
        android:id="@+id/weight"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintLeft_toRightOf="@id/inventory"
        >
    </EditText>

</androidx.constraintlayout.widget.ConstraintLayout>

